# smsbridge

./: .env.example  .gitignore  CHANGES.md  README.md  _commit_msg.txt  config.yaml.example  conftest.py  pyproject.toml
android/: README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/smsbridge/: ForwardService.kt  HttpClient.kt  MainActivity.kt  SmsData.kt  SmsReceiver.kt
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
docs/: CONFIGURATION.md  EXECUTION_PLAN.md  INSTALL.md  ROADMAP.md  index.md
docs/features/: 01-wifi-adb.md  02-telegram-bot-control.md  03-system-tray.md  04-call-alert.md  05-docker.md  06-web-panel.md  07-tls-encryption.md  08-telegram-filter-mgmt.md  09-metrics.md  10-multi-channel.md  11-desktop-gui.md  12-ios-support.md  13-auto-reply.md  14-home-assistant.md  index.md
scripts/: README.md  bootstrap.sh  bridge.bat  bridge.ps1  bridge.sh  gen-certs.sh
server/: __init__.py  aggregator.py  cli.py  config.py  filter_engine.py  main.py  models.py  telegram.py
server/web/: __init__.py
server/web/templates/: dashboard.html  settings.html
tests/: test_aggregator.py  test_filter.py  test_imports.py  test_server_smoke.py
