[project]
name = "smsbridge"
version = "0.6.0"
description = "SMS → Telegram forwarding via USB (ADB reverse)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Davncl" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.scripts]
smsbridge = "server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]